# ecu-complexity-labs

./: README.md  pyproject.toml
day1/: day1_reference_r.html  day1_reference_r.ipynb  day1_workbook.ipynb
day2/: day2_reference_r.html  day2_reference_r.ipynb  day2_workbook.ipynb
day3/: day3_reference_r.html  day3_reference_r.ipynb  day3_reference_student.html  day3_reference_student.ipynb  day3_workbook.ipynb
primers/: primer_python.ipynb  primer_r.ipynb  trade_extract.csv
